--- a/Page_Cinema/CONNEXION_INSCRIPTION/Page_connexion/connexion.css
+++ b/Page_Cinema/CONNEXION_INSCRIPTION/Page_connexion/connexion.css
@@ -1,95 +1,99 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background : url("https://img.freepik.com/vecteurs-premium/conception-affiche-premiere-cinema-film-fond-vecteur-cinema-ecran-cinema-ecran-blanc_165143-1170.jpg");
+    background-color: lightgreen;
 }
-
-form {
-    margin: 20px;
-
+header {
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 15vh;
+    box-shadow: 5px 5px 10px rgb(0,0,0,0.3);
 }
-
-.form {
-    max-width: 400px;
-    margin: auto;
-    background:#fff;
-    padding: 20px;
+h1 {
+    letter-spacing: 1.5vw;
+    font-family: 'system-ui';
+    text-transform: uppercase;
+    text-align: center;
+}
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 75vh;
+    width: 100%;
+    background: url(https://www.fmsh.fr/sites/default/files/styles/w1920_extra_wide/public/media/images/Visuel-site-web-cinema.gif?itok=pCW_N1qd) no-repeat center center;
+    background-size: cover;
+}
+.form_class {
+    width: 500px;
+    padding: 40px;
     border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    font-family: 'system-ui';
+    box-shadow: 5px 5px 10px rgb(0,0,0,0.3);
 }
-
-.title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
+.form_div {
+    text-transform: uppercase;
+}
+.form_div > label {
+    letter-spacing: 3px;
+    font-size: 1rem;
+}
+.info_div {
     text-align: center;
-}
-
-.input-container {
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.input {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    outline: none;
-    font-size: 16px;
-}
-
-.cut {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-top: 1px solid #ccc;
-}
-
-.placeholder {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    pointer-events: none;
-    transition: all 0.15s ease-out;
-}
-
-.input:focus + .cut,
-.input:not(:placeholder-shown) + .cut,
-.input:focus + .placeholder {
-    border-top: 1px solid #007bff;
-    transform: translateY(-8px);
-    color: #007bff;
-}
-
-.submit {
-    display: block;
-    width: 100%;
-    padding: 10px;
     margin-top: 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+}
+.info_div {
+    letter-spacing: 1px;
+}
+.field_class {
+    width: 100%;
+    border-radius: 6px;
+    border-style: solid;
+    border-width: 1px;
+    padding: 5px 0px;
+    text-indent: 6px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-family: 'system-ui';
+    font-size: 0.9rem;
+    letter-spacing: 2px;
+}
+.submit_class {
+    border-style: none;
+    border-radius: 5px;
+    background-color: #FFE6D4;
+    padding: 8px 20px;
+    font-family: 'system-ui';
+    text-transform: uppercase;
+    letter-spacing: .8px;
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    box-shadow: 2px 2px 5px rgb(0,0,0,0.2);
     cursor: pointer;
-    font-size: 16px;
 }
-
-a {
-    display: block;
-    margin-top: 20px;
+footer {
+    height: 10vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: -5px -5px 10px rgb(0,0,0,0.3);
+}
+footer > p {
     text-align: center;
-    color: #007bff;
+    font-family: 'system-ui';
+    letter-spacing: 3px;
+}
+footer > p > a {
     text-decoration: none;
-}
-
-p {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 14px;
-    color: #555;
+    color: white;
+    font-weight: bold;
 }
