--- a/Page_Cinema/CONNEXION_INSCRIPTION/Page_inscription/inscription_reussi.css
+++ b/Page_Cinema/CONNEXION_INSCRIPTION/Page_inscription/inscription_reussi.css
@@ -1,15 +1,17 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f2f2f2;
+    background-color: rgba(69, 73, 115, 0.82);
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+
 }
 
 #main {
     text-align: center;
+    background-color: rgba(69, 73, 115, 0.82);
 }
 
 #card_container {
@@ -59,10 +61,11 @@ h3 {
 
 form {
     margin-top: 20px;
+
 }
 
 input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #49d7f5;
     color: #fff;
     padding: 10px 20px;
     font-size: 16px;
@@ -73,5 +76,5 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #49d7f5;
 }
