MAJ : Correction du probléme

--- a/Page_Cinema/ACCEUIL et NAVBAR/style.css
+++ b/Page_Cinema/ACCEUIL et NAVBAR/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("img/popcorn-1433327_1920.jpg");
+    background: url("../MENU/UTILISATEUR/Menu/img/popcorn-1433327_1920.jpg");
     background-position: center;
     background-blend-mode: multiply;
     background-size: cover;
